--- a/teyvatVN/src/pages/characters.html
+++ b/teyvatVN/src/pages/characters.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Character Selection</title>
-  <link rel="stylesheet" href="characters.css" />
+  <link rel="stylesheet" href="../styles/CharacterPage.css" />
 </head>
+
 <body>
   <header>
     <span class="logo">teyvat.vn</span>
@@ -19,7 +21,8 @@
   <main>
     <h1>Characters</h1>
     <p class="subtitle">
-      Pick two characters to star in your story. Click a card to view their profile — then select your favorites to begin the journey.
+      Pick two characters to star in your story. Click a card to view their profile — then select your favorites to
+      begin the journey.
     </p>
 
     <div class="topbar">
@@ -45,4 +48,5 @@
 
   <script src="characters.js"></script>
 </body>
+
 </html>
